--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,8 @@ body{
 }
 
 img{
-  max-width: 100%;
-  height: auto;
+  width: 20px;
+  height: 20px;
 }
 
 .container{
@@ -67,7 +67,13 @@ nav a {
   .button-accent{
     font-size: 1.1rem;
   }
+  .button-small{
+    font-size: 0.9rem;
+  }
   .small-white-text{
+    font-size: .4rem;
+  }
+  .small-white-text-2{
     font-size: .4rem;
   }
 }
@@ -88,7 +94,13 @@ nav a {
   .button-accent{
     font-size: 1.2rem;
   }
+  .button-small{
+    font-size: 0.95rem;
+  }
   .small-white-text{
+    font-size: .45rem;
+  }
+  .small-white-text-2{
     font-size: .45rem;
   }
 }
@@ -109,7 +121,13 @@ nav a {
   .button-accent{
     font-size: 1.4rem;
   }
+  .button-small{
+    font-size: 1.10rem;
+  }
   .small-white-text{
+    font-size: .5rem;
+  }
+  .small-white-text-2{
     font-size: .5rem;
   }
 }
@@ -130,7 +148,13 @@ nav a {
   .button-accent{
     font-size: 1.55rem;
   }
+  .button-small{
+    font-size: 1.15rem;
+  }
   .small-white-text{
+    font-size: .55rem;
+  }
+  .small-white-text-2{
     font-size: .55rem;
   }
 }
@@ -151,7 +175,13 @@ nav a {
   .button-accent{
     font-size: 1.75rem;
   }
+  .button-small{
+    font-size: 1.25rem;
+  }
   .small-white-text{
+    font-size: .6rem;
+  }
+  .small-white-text-2{
     font-size: .6rem;
   }
 }
@@ -229,6 +259,7 @@ nav a:focus{
   color: white;
   font-size: .6rem;
   padding: 6em 2em 0 2em;
+  padding-right: 4%;
   text-align:  right;
   margin-bottom: 0;
 }
@@ -237,6 +268,7 @@ nav a:focus{
   color: white;
   font-size: .6rem;
   padding: 1em 2em 0 2em;
+  padding-right: 4%;
   text-align:  right;
   margin-bottom: 0;
 }
@@ -304,15 +336,17 @@ nav a:focus{
 
 /* home-about
    ======================= */
-
 .home-about{
+  margin: 0.25em 0 0.25em 0;
   background-image: url("../img/three_sisters_cover_page.JPG");
   color: white;
-  margin-top: 0.25em;
-  padding-left: 20.5%;
+  padding-bottom: 2em;
+}
+
+.home-about-textbox{
+  padding-left: 20%;
   padding-right: 20%;
   padding-top: 2em;
-  padding-bottom: 2em;
 }
 
 .heading{
@@ -335,6 +369,113 @@ nav a:focus{
 .port-item{
   margin-bottom: 0;
   padding-bottom: 1em;
+}
+
+.project-title{
+  padding-bottom: 1em;
+}
+
+.portfolio-img{
+  max-width: 100%;
+  width: 500px;
+  height: auto;
+  border: solid 5px #EFEFEF;
+
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.portfolio-img:hover{
+  border: solid 5px #DCDCDC;
+  -moz-box-shadow: 1px 1px 5px #999;
+  -webkit-box-shadow: 1px 1px 5px #999;
+  box-shadow: 1px 1px 5px #999;
+}
+
+/* Portfolio Image Overlay
+  ========================= */
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 500px;
+  height: auto;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgba(255, 255, 255, .5);
+}
+
+.transparent-overlay{
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 500px;
+  height: auto;
+  text-align: center;
+}
+
+.overlay-container {
+  display: inline-block;
+  position: relative;
+  width: 500px;
+}
+
+.overlay-text-2 {
+  transition: .5s ease;
+  opacity: 0;
+  color: #000;
+  font-size: 24px;
+  font-weight: 900;
+  display: inline-block;
+  text-align: center;
+  padding: 16px 0px;
+  transform: translate(0, 80%);
+}
+
+.overlay-container:hover .overlay{
+  opacity: 1;
+}
+
+.overlay-container:hover .transparent-overlay{
+  opacity: 1;
+}
+
+.overlay-container:hover .overlay-text-2{
+  opacity: 1;
+}
+
+.overlay-text {
+  background-color: rgba(115, 197, 101, 1);
+  color: white;
+  border: solid 2px rgba(255, 255, 255, 0);
+  font-size: 16px;
+  padding: 16px 0px;
+  width: 150px;
+  transform: translate(115%, 130%);
+  display: block;
+  text-decoration: none;
+}
+
+.overlay-text:hover,
+.overlay-text:focus{
+  text-decoration: none;
+  color: black;
+  border: solid 2px black;
+  background-color: rgba(160, 247, 141, .75);
+}
+
+.centered{
+  text-align:center;
+  padding-bottom: 2em;
 }
 
 /* footer
@@ -366,4 +507,64 @@ footer a:focus{
   border-bottom-color: #8CE379;
   border-bottom-width: 2px;
   padding-bottom: 3px;
+}
+
+
+
+/* Acknowledgements
+  ========================= */
+#camera-logo{
+  width:20px;
+  height:20px;
+}
+
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 175px;
+  background-color: #151515;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 5px;
+
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  top: 0px;
+  right: 125%;
+}
+
+#pineapple{
+  width: 220px;
+}
+
+#my-photo{
+  width: 70px;
+}
+
+.tooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 100%; /* To the right of the tooltip */
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent #151515;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.tooltip:focus,
+.tooltip:active{
+  visibility: visible;
 }
