--- a/css/styles.css
+++ b/css/styles.css
@@ -396,87 +396,134 @@ nav a:focus{
 
 /* Portfolio Image Overlay
   ========================= */
+  @media (min-width: 450px){
+    .portfolio-img{
+      width: 300px;
+    }
+    .centered{
+      text-align:center;
+      padding-bottom: 2em;
+    }
+    .overlay-container {
+      display: inline-block;
+      position: relative;
+      width: 300px;
+    }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 500px;
-  height: auto;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: rgba(255, 255, 255, .5);
-}
+    .overlay-text-2 {
+      opacity: 1;
+      color: #FFF;
+      font-size: 24px;
+      font-weight: 900;
+      display: inline-block;
+      text-align: center;
+      transform: translate(0, 50%);
+    }
 
-.transparent-overlay{
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 500px;
-  height: auto;
-  text-align: center;
-}
+    .overlay-text {
+      font-family: 'Amatic SC', 'Raleway', sans-serif;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #89E076;
+      padding: 0.5em 1.2em 0.5em 1.2em;
+      border-style: solid;
+      border-width: 3px;
+      border-color: #89E076;
+    }
 
-.overlay-container {
-  display: inline-block;
-  position: relative;
-  width: 500px;
-}
+    .overlay-text:hover,
+    .overlay-text:focus{
+      color: white;
+      border-color: white;
+      background-color: rgba(140, 227, 121, .75);
+    }
+  }
 
-.overlay-text-2 {
-  transition: .5s ease;
-  opacity: 0;
-  color: #000;
-  font-size: 24px;
-  font-weight: 900;
-  display: inline-block;
-  text-align: center;
-  padding: 16px 0px;
-  transform: translate(0, 80%);
-}
+  @media (min-width: 600px){
+    .portfolio-img{
+      width: 500px;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 500px;
+      height: auto;
+      opacity: 0;
+      transition: .5s ease;
+      background-color: rgba(255, 255, 255, .5);
+    }
 
-.overlay-container:hover .overlay{
-  opacity: 1;
-}
+    .transparent-overlay{
+      transition: .5s ease;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 500px;
+      height: auto;
+      text-align: center;
+    }
 
-.overlay-container:hover .transparent-overlay{
-  opacity: 1;
-}
+    .overlay-container {
+      display: inline-block;
+      position: relative;
+      width: 500px;
+    }
 
-.overlay-container:hover .overlay-text-2{
-  opacity: 1;
-}
+    .overlay-text-2 {
+      transition: .5s ease;
+      opacity: 0;
+      color: #000;
+      font-size: 24px;
+      font-weight: 900;
+      display: inline-block;
+      text-align: center;
+      padding: 16px 0px;
+      transform: translate(0, 80%);
+    }
 
-.overlay-text {
-  background-color: rgba(115, 197, 101, 1);
-  color: white;
-  border: solid 2px rgba(255, 255, 255, 0);
-  font-size: 16px;
-  padding: 16px 0px;
-  width: 150px;
-  transform: translate(115%, 130%);
-  display: block;
-  text-decoration: none;
-}
+    .overlay-container:hover .overlay{
+      opacity: 1;
+    }
 
-.overlay-text:hover,
-.overlay-text:focus{
-  text-decoration: none;
-  color: black;
-  border: solid 2px black;
-  background-color: rgba(160, 247, 141, .75);
-}
+    .overlay-container:hover .transparent-overlay{
+      opacity: 1;
+    }
 
-.centered{
-  text-align:center;
-  padding-bottom: 2em;
-}
+    .overlay-container:hover .overlay-text-2{
+      opacity: 1;
+    }
+
+    .overlay-text {
+      background-color: rgba(115, 197, 101, 1);
+      color: white;
+      border: solid 2px rgba(255, 255, 255, 0);
+      font-size: 16px;
+      padding: 16px 0px;
+      width: 150px;
+      transform: translate(115%, 130%);
+      display: block;
+      text-decoration: none;
+    }
+
+    .overlay-text:hover,
+    .overlay-text:focus{
+      text-decoration: none;
+      color: black;
+      border: solid 2px black;
+      background-color: rgba(160, 247, 141, .75);
+    }
+
+    .centered{
+      text-align:center;
+      padding-bottom: 2em;
+    }
+  }
 
 /* footer
    ======================= */
