--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Add under construction popup at the beginning */
+
 @import
 url("https://fonts.googleapis.com/css?family=Raleway:100, 300, 400, 700, 900");
 @import
