--- a/css/styles.css
+++ b/css/styles.css
@@ -499,6 +499,10 @@ nav a:focus{
     .portfolio-img{
       width: 300px;
     }
+    .portfolio-img-2{
+      width: 300px;
+    }
+
     .centered{
       text-align:center;
       padding-bottom: 2em;
@@ -540,6 +544,9 @@ nav a:focus{
 
   @media (min-width: 600px){
     .portfolio-img{
+      width: 500px;
+    }
+    .portfolio-img-2{
       width: 500px;
     }
     .overlay {
@@ -586,6 +593,18 @@ nav a:focus{
       transform: translate(0, 80%);
     }
 
+    .overlay-text-4 {
+      transition: .5s ease;
+      opacity: 0;
+      color: #000;
+      font-size: 24px;
+      font-weight: 900;
+      display: inline-block;
+      text-align: center;
+      padding: 16px 0px;
+      transform: translate(0, 130%);
+    }
+
     .overlay-container:hover .overlay{
       opacity: 1;
     }
@@ -598,6 +617,10 @@ nav a:focus{
       opacity: 1;
     }
 
+    .overlay-container:hover .overlay-text-4{
+      opacity: 1;
+    }
+
     .overlay-text {
       background-color: rgba(115, 197, 101, 1);
       color: white;
@@ -605,13 +628,33 @@ nav a:focus{
       font-size: 16px;
       padding: 16px 0px;
       width: 150px;
-      transform: translate(115%, 130%);
+      transform: translate(115%, 135%);
+      display: block;
+      text-decoration: none;
+    }
+
+    .overlay-text-3 {
+      background-color: rgba(115, 197, 101, 1);
+      color: white;
+      border: solid 2px rgba(255, 255, 255, 0);
+      font-size: 16px;
+      padding: 16px 0px;
+      width: 150px;
+      transform: translate(115%, 200%);
       display: block;
       text-decoration: none;
     }
 
     .overlay-text:hover,
     .overlay-text:focus{
+      text-decoration: none;
+      color: black;
+      border: solid 2px black;
+      background-color: rgba(160, 247, 141, .75);
+    }
+
+    .overlay-text-3:hover,
+    .overlay-text-3:focus{
       text-decoration: none;
       color: black;
       border: solid 2px black;
